tests/negative/test_continue_no_semicolon.orb
fnc main() {
    while (false) {
        continue
    }
}